--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <li>lasagna</li>
   </ul>
   <p>Top 3 things cats hate:</p>
-<ol>
-  <li>men</li>
-  <li>women</li>
-  <li>child</li>
-</ol>
+  <ol>
+    <li>flea treatment</li>
+    <li>thunder</li>
+    <li>other cats</li>
+  </ol>
+<input type="text">
+
 </main>
