--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <li>other cats</li>
   </ol>
   <form action="https://www.freecatphotoapp.com/submit-cat-photo">
-    <input type="text"  required placeholder="cat photo URL">
+    <input type="text" placeholder="cat photo URL" required>
+    <label for="indoor"> 
+  <input id="indoor" type="radio" name="indoor-outdoor">Indoor 
+</label>
+<label for="indoor"> 
+  <input id="outdoor" type="radio" name="indoor-outdoor">Outdoor 
+</label>
     <button type="submit">Submit</button>
   </form>
 </main>
