--- a/index1.html
+++ b/index1.html
@@ -17,13 +17,12 @@
     <li>other cats</li>
   </ol>
   <form action="https://www.freecatphotoapp.com/submit-cat-photo">
+    <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor"> Indoor</label>
+    <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor"> Outdoor</label><br>
     <input type="text" placeholder="cat photo URL" required>
-    <label for="indoor"> 
-  <input id="indoor" type="radio" name="indoor-outdoor">Indoor 
-</label>
-<label for="indoor"> 
-  <input id="outdoor" type="radio" name="indoor-outdoor">Outdoor 
-</label>
+    <label for="loving"><input id="loving" type="checkbox" name="personality"> Loving</label>
+    <label for="Blue"><input id="blue" type="checkbox" name="personality"> Blue</label>
+    <label for="rose"><input id="rose" type="checkbox" name="personality"> Rose</label>
     <button type="submit">Submit</button>
   </form>
 </main>
