--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,16 @@
-style>
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+
+<style>
   .red-text {
     color: red;
   }
 
-  p {
-    font-size: 16px;
-    font-family: monospace;
+  p {font-size: 16px;
+        font-family: monospace;
+  }
+  h2 {
+    
+    font-family: Lobster;
   }
 </style>
 
