add-rounded-corners-with-border-radius

--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,27 @@
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
-  .thin-green-border {
+  .red-text {
+    color: red;
+  }
+
+  h2 {
+    font-family: Lobster, monospace;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+
+  .thick-green-border {
     border-color: green;
     border-width: 10px;
     border-style: solid;
+  }
+
+  .smaller-image {
+    width: 100px;
+    border-radius: 10px;
   }
 </style>
 
