--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,10 @@
     color: red;
   }
 
+  .silver-background {
+    background-color: silver;
+  }
+
   h2 {
     font-family: Lobster, monospace;
   }
@@ -29,9 +33,11 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-  <a href="#"><img class="smaller-image thick-green-border" src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="smaller-image thick-green-border"
+      src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
+      alt="A cute orange cat lying on its back."></a>
 
-  <div>
+  <div class="silver-background">
     <p>Things cats love:</p>
     <ul>
       <li>cat nip</li>
