--- a/index1.html
+++ b/index1.html
@@ -4,10 +4,6 @@
     color: red;
   }
 
-  .silver-background {
-    background-color: silver;
-  }
-
   h2 {
     font-family: Lobster, monospace;
   }
@@ -26,6 +22,10 @@
 
   .smaller-image {
     width: 100px;
+  }
+
+  .silver-background {
+    background-color: silver;
   }
 </style>
 
@@ -52,7 +52,7 @@
     </ol>
   </div>
 
-  <form action="https://freecatphotoapp.com/submit-cat-photo">
+  <form action="https://freecatphotoapp.com/submit-cat-photo" id="cat-photo-form">
     <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
     <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
     <label><input type="checkbox" name="personality" checked> Loving</label>
