--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,10 @@
     color: red;
   }
 
+  #cat-photo-form {
+    background-color: green;
+  }
+
   h2 {
     font-family: Lobster, monospace;
   }
