--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,11 @@
-<h1> Hello World </h1>
-
 <style>
   body {
     background-color: black;
-    color: green;
     font-family: monospace;
+    color: green;
   }
-
+  .pink-text {
+    color:pink;
+  }
 </style>
+<h1 class="pink-text">Hello World!</h1>
