use-a-custom-css-variable

--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,5 @@
 <style>
-  
   .penguin {
-    /* Only change code below this line */
-
-    /* Only change code above this line */
     --penguin-skin: gray;
     position: relative;
     margin: auto;
@@ -14,18 +10,26 @@
   }
 
   .penguin-top {
+    background: var(--penguin-skin);
     top: 10%;
     left: 25%;
-    background: black;
+
+    /* Change code below this line */
+    /* Change code above this line */
+
     width: 50%;
     height: 45%;
     border-radius: 70% 70% 60% 60%;
   }
 
   .penguin-bottom {
+    background: var(--penguin-skin);
     top: 40%;
     left: 23.5%;
-    background: black;
+
+    /* Change code below this line */
+    /* Change code above this line */
+
     width: 53%;
     height: 45%;
     border-radius: 70% 70% 100% 100%;
@@ -34,7 +38,11 @@
   .right-hand {
     top: 0%;
     left: -5%;
-    background: black;
+
+    /* Change code below this line */
+    background: var(--penguin-skin);
+    /* Change code above this line */
+
     width: 30%;
     height: 60%;
     border-radius: 30% 30% 120% 30%;
@@ -45,7 +53,11 @@
   .left-hand {
     top: 0%;
     left: 75%;
-    background: black;
+
+    /* Change code below this line */
+    background: var(--penguin-skin);
+    /* Change code above this line */
+
     width: 30%;
     height: 60%;
     border-radius: 30% 30% 30% 120%;
@@ -166,7 +178,7 @@
   }
 
   body {
-    background:#c6faf1;
+    background: #c6faf1;
   }
 
   .penguin * {
