--- a/index1.html
+++ b/index1.html
@@ -1,15 +1,16 @@
 <style>
   h4 {
-text-align: center;
+    text-align: center;
   }
   p {
-text-align: justify;
+    text-align: justify;
   }
   .links {
     margin-right: 20px;
-
+    text-align: left;
   }
   .fullCard {
+ width: 245px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin: 10px 5px;
@@ -19,6 +20,7 @@ text-align: justify;
     padding: 10px;
   }
 </style>
+
 <div class="fullCard">
   <div class="cardContent">
     <div class="cardText">
