--- a/index1.html
+++ b/index1.html
@@ -5,22 +5,18 @@
     padding: 10px;
     font-size: 27px;
   }
-
   p {
     text-align: justify;
   }
-
   .links {
     text-align: left;
     color: black;
-  }
+opacity: 0.7;
 
+  }
   #thumbnail {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
-
-
-
   .fullCard {
     width: 245px;
     border: 1px solid #ccc;
@@ -28,11 +24,9 @@
     margin: 10px 5px;
     padding: 4px;
   }
-
   .cardContent {
     padding: 10px;
   }
-
   .cardText {
     margin-bottom: 30px;
   }
@@ -42,8 +36,7 @@
     <div class="cardText">
       <h4>Alphabet</h4>
       <hr>
-      <p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford
-            University</strong>.</em></p>
+      <p><em>Google was founded by Larry Page and Sergey Brin while they were <u>Ph.D. students</u> at <strong>Stanford University</strong>.</em></p>
     </div>
     <div class="cardLinks">
       <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a><br><br>
