move-a-relatively-positioned-element-with-css-offsets

--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,14 @@
-<style>
-  h2 {
+<head>
+  <style>
+    h2 {
+      position: relative;
+      bottom: 10px;
+      left: 15px;
 
-    position: relative;
-    top: 15px;
 
-  }
-</style>
+    }
+  </style>
+</head>
 
 <body>
   <h1>On Being Well-Positioned</h1>
