--- a/index1.html
+++ b/index1.html
@@ -1,37 +1,23 @@
 <body>
 <header>
-    <h1>Deep Thoughts with Master Camper Cat</h1>
+    <h1>Tournaments</h1>
 </header>
-<section>
-    <form>
-        <p>Sign up to receive Camper Cat's blog posts by email here!</p>
+<main>
+    <section>
+        <h2>Mortal Kombat Tournament Survey</h2>
+        <form>
+            <p>Tell us the best date for the competition</p>
+            <label for="pickdate">Preferred Date:</label>
+
+            <!-- Only change code below this line -->
+            <input type="date" id="pickdate" name="date">
 
 
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email">
+            <!-- Only change code above this line -->
 
-
-        <input type="submit" name="submit" value="Submit">
-    </form>
-</section>
-<article>
-    <h2>The Garfield Files: Lasagna as Training Fuel?</h2>
-    <p>The internet is littered with varying opinions on nutritional paradigms, from catnip paleo to hairball cleanses.
-        But let's turn our attention to an often overlooked fitness fuel, and examine the protein-carb-NOM trifecta that
-        is lasagna...</p>
-</article>
-<img src="samuraiSwords.jpeg" alt="">
-<article>
-    <h2>Defeating your Foe: the Red Dot is Ours!</h2>
-    <p>Felines the world over have been waging war on the most persistent of foes. This red nemesis combines both
-        cunning stealth and lightning speed. But chin up, fellow fighters, our time for victory may soon be near...</p>
-</article>
-<img src="samuraiSwords.jpeg" alt="">
-<article>
-    <h2>Is Chuck Norris a Cat Person?</h2>
-    <p>Chuck Norris is widely regarded as the premier martial artist on the planet, and it's a complete coincidence that
-        anyone who disagrees with this fact mysteriously disappears soon after. But the real question is, is he a cat
-        person?...</p>
-</article>
+            <input type="submit" name="submit" value="Submit">
+        </form>
+    </section>
+</main>
 <footer>&copy; 2018 Camper Cat</footer>
 </body>
