--- a/index1.html
+++ b/index1.html
@@ -1,46 +1,29 @@
-<body>
-<div tabindex="1" class="overlay"></div>
-<header>
-    <h1>Even Deeper Thoughts with Master Camper Cat</h1>
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Training</a></li>
-        </ul>
-    </nav>
-</header>
-<form>
-    <label for="search">Search:</label>
-
-
-    <input type="search" name="search" id="search" tabindex="1">
-    <input type="submit" name="submit" tabindex="2" value="Submit" id="submit">
-
-
-</form>
-<h2>Inspirational Quotes</h2>
-<blockquote>
-    <p>&ldquo;There's no Theory of Evolution, just a list of creatures I've allowed to live.&rdquo;<br>
-        - Chuck Norris</p>
-</blockquote>
-<blockquote>
-    <p>&ldquo;Wise men say forgiveness is divine, but never pay full price for late pizza.&rdquo;<br>
-        - TMNT</p>
-</blockquote>
-<footer>&copy; 2018 Camper Cat</footer>
-</body>
 <style>
-    body {
-        height: 100%;
-        margin: 0 !important;
-        padding: 8px;
+    p {
+        font-size: 20px;
+
+    @media (max-font-size: 10px) {
+        /* CSS Rules */
     }
 
-    .overlay {
-        margin: -8px;
-        position: absolute;
-        width: 100%;
-        height: 100%;
+    ;
+    @media (max-height: 800px) {
+        /* CSS Rules */
     }
+
+    }
+
+    /* Only change code below this line */
+    @media (max-height: 800px) {
+        p {
+            font-size: 10px;
+        }
+    }
+
+    /* Only change code above this line */
 </style>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis tempus massa. Aenean erat nisl, gravida vel
+    vestibulum cursus, interdum sit amet lectus. Sed sit amet quam nibh. Suspendisse quis tincidunt nulla. In hac
+    habitasse platea dictumst. Ut sit amet pretium nisl. Vivamus vel mi sem. Aenean sit amet consectetur sem.
+    Suspendisse pretium, purus et gravida consequat, nunc ligula ultricies diam, at aliquet velit libero a dui.</p>
