--- a/index1.html
+++ b/index1.html
@@ -1,29 +1,15 @@
 <style>
-    p {
-        font-size: 20px;
-
-    @media (max-font-size: 10px) {
-        /* CSS Rules */
-    }
-
-    ;
-    @media (max-height: 800px) {
-        /* CSS Rules */
-    }
+    .responsive-img {
+        max-width: 100%;
+        height: auto;
 
     }
 
-    /* Only change code below this line */
-    @media (max-height: 800px) {
-        p {
-            font-size: 10px;
-        }
+    img {
+        width: 600px;
     }
-
-    /* Only change code above this line */
 </style>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis tempus massa. Aenean erat nisl, gravida vel
-    vestibulum cursus, interdum sit amet lectus. Sed sit amet quam nibh. Suspendisse quis tincidunt nulla. In hac
-    habitasse platea dictumst. Ut sit amet pretium nisl. Vivamus vel mi sem. Aenean sit amet consectetur sem.
-    Suspendisse pretium, purus et gravida consequat, nunc ligula ultricies diam, at aliquet velit libero a dui.</p>
+<img class="responsive-img" src="https://s3.amazonaws.com/freecodecamp/FCCStickerPack.jpg"
+     alt="freeCodeCamp stickers set">
+<img src="https://s3.amazonaws.com/freecodecamp/FCCStickerPack.jpg" alt="freeCodeCamp stickers set">
