--- a/index1.html
+++ b/index1.html
@@ -1,25 +1,39 @@
 <style>
-    #box-container {
-        display: flex;
-        height: 500px;
+    .d1 {
+        background: LightSkyBlue;
     }
 
-    #box-1 {
-        background-color: dodgerblue;
-        align-self: center;
-        height: 200px;
-        width: 200px;
+    .d2 {
+        background: LightSalmon;
     }
 
-    #box-2 {
-        background-color: orangered;
-        align-self: flex-end;
-        height: 200px;
-        width: 200px;
+    .d3 {
+        background: PaleTurquoise;
+    }
+
+    .d4 {
+        background: LightPink;
+    }
+
+    .d5 {
+        background: PaleGreen;
+    }
+
+    .container {
+        font-size: 40px;
+        width: 100%;
+        background: LightGray;
+        /* Only change code below this line */
+
+        display: grid;
+        /* Only change code above this line */
     }
 </style>
 
-<div id="box-container">
-    <div id="box-1"></div>
-    <div id="box-2"></div>
+<div class="container">
+    <div class="d1">1</div>
+    <div class="d2">2</div>
+    <div class="d3">3</div>
+    <div class="d4">4</div>
+    <div class="d5">5</div>
 </div>
