--- a/index1.html
+++ b/index1.html
@@ -24,11 +24,12 @@
         width: 100%;
         background: LightGray;
         display: grid;
-        grid-template-columns: 100px 100px 100px;
         /* Only change code below this line */
-        grid-template-rows: 50px 50px;
 
+        grid-template-columns: auto 50px 10% 2fr 1fr;
+        grid-template-columns:  1fr 100px 2fr;
         /* Only change code above this line */
+        grid-template-rows: 50px 50px;
     }
 </style>
 
@@ -38,4 +39,4 @@
     <div class="d3">3</div>
     <div class="d4">4</div>
     <div class="d5">5</div>
-</div>
+</div>a
