--- a/index1.html
+++ b/index1.html
@@ -21,15 +21,16 @@
 
     .container {
         font-size: 40px;
+        min-height: 300px;
         width: 100%;
         background: LightGray;
         display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         /* Only change code below this line */
+        grid-column-gap: 20px;
 
-        grid-template-columns: auto 50px 10% 2fr 1fr;
-        grid-template-columns:  1fr 100px 2fr;
         /* Only change code above this line */
-        grid-template-rows: 50px 50px;
     }
 </style>
 
@@ -39,4 +40,4 @@
     <div class="d3">3</div>
     <div class="d4">4</div>
     <div class="d5">5</div>
-</div>a
+</div>
