--- a/index1.html
+++ b/index1.html
@@ -1,22 +1,26 @@
 <style>
-    .d1 {
+    .item1 {
         background: LightSkyBlue;
     }
 
-    .d2 {
+    .item2 {
         background: LightSalmon;
     }
 
-    .d3 {
+    .item3 {
         background: PaleTurquoise;
     }
 
-    .d4 {
+    .item4 {
         background: LightPink;
     }
 
-    .d5 {
+    .item5 {
         background: PaleGreen;
+        /* Only change code below this line */
+        grid-column: 2 / 4;
+
+        /* Only change code above this line */
     }
 
     .container {
@@ -27,16 +31,14 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        /* Only change code below this line */
-        grid-gap: 10px 20px;
-
-        /* Only change code above this line */
+        grid-gap: 10px;
     }
 </style>
+
 <div class="container">
-    <div class="d1">1</div>
-    <div class="d2">2</div>
-    <div class="d3">3</div>
-    <div class="d4">4</div>
-    <div class="d5">5</div>
+    <div class="item1">1</div>
+    <div class="item2">2</div>
+    <div class="item3">3</div>
+    <div class="item4">4</div>
+    <div class="item5">5</div>
 </div>
