--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,10 @@
 
     .item2 {
         background: LightSalmon;
+        /* Only change code below this line */
+        justify-self: center;
+
+        /* Only change code above this line */
     }
 
     .item3 {
@@ -17,10 +21,6 @@
 
     .item5 {
         background: PaleGreen;
-        grid-column: 2 / 4;
-        /* Only change code below this line */
-        grid-row: 2 / 4;
-        /* Only change code above this line */
     }
 
     .container {
