--- a/index1.html
+++ b/index1.html
@@ -5,14 +5,14 @@
 
     .item2 {
         background: LightSalmon;
-        /* Only change code below this line */
-        justify-self: center;
-
-        /* Only change code above this line */
     }
 
     .item3 {
         background: PaleTurquoise;
+        /* Only change code below this line */
+
+        align-self: end;
+        /* Only change code above this line */
     }
 
     .item4 {
