align-all-items-horizontally-using-justify-items

--- a/index1.html
+++ b/index1.html
@@ -9,10 +9,6 @@
 
     .item3 {
         background: PaleTurquoise;
-        /* Only change code below this line */
-
-        align-self: end;
-        /* Only change code above this line */
     }
 
     .item4 {
@@ -32,6 +28,10 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         grid-gap: 10px;
+        /* Only change code below this line */
+        justify-items: center;
+
+        /* Only change code above this line */
     }
 </style>
 
