place-items-in-grid-areas-using-the-grid-area-property

--- a/index1.html
+++ b/index1.html
@@ -17,6 +17,10 @@
 
     .item5 {
         background: PaleGreen;
+        /* Only change code below this line */
+
+        grid-area: footer;
+        /* Only change code above this line */
     }
 
     .container {
@@ -29,10 +33,9 @@
         grid-template-rows: 1fr 1fr 1fr;
         grid-gap: 10px;
         grid-template-areas:
-    /* Only change code below this line */ "header header header"
+      "header header header"
       "advert content content"
       "footer footer footer";
-        /* Only change code above this line */
     }
 </style>
 
