--- a/index1.html
+++ b/index1.html
@@ -17,10 +17,7 @@
 
     .item5 {
         background: PaleGreen;
-        /* Only change code below this line */
-
-        grid-area: footer;
-        /* Only change code above this line */
+        grid-area: 3/1/4/4;
     }
 
     .container {
@@ -32,10 +29,6 @@
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         grid-gap: 10px;
-        grid-template-areas:
-      "header header header"
-      "advert content content"
-      "footer footer footer";
     }
 </style>
 
