--- a/index1.html
+++ b/index1.html
@@ -1,53 +1,39 @@
+<h1 id="title"> freeCodeCamp Survey Form </h1>
+<p id="description"> Thank you for taking the time to help us improve the platform </p>
+<form id="survey-form">
+    <p><input id="name" type="text" placeholder="Enter your name" required> Name </input> </p>
+    <p><input id="email" type="email" placeholder="email" required> Email  </input></p>
+    <p>
+        <input id="number" type="number" min="10" max="100" placeholder="number"> Age (optional)  </input></p>
+
+    <select id="dropdown">
+        <option>Пункт 1</option>
+        <option>Пункт 2</option>
+    </select>
+    </select>
+    <label id="name-label"> Enter your name</label>
+
+
+    <label type="radio" id="email-label">Enter your email </label>
+    <label type="radio" id="number-label"> Age</label>
+
+    <label for="Definitely">
+        Definitely</label>
+    <label for="Maybe"><input id="Maybe" type="radio" name="Maybe" value="Maybe" value="May" checked> Maybe</label>
+    <label for="Not sure"><input id="Not sure" type="radio" name="Not sure" value="Not sure" value="Not sure"> Not sure</label>
+
+    <input type="checkbox" value="Front-end Projects"> Open Source Community</input>
+    <input type="checkbox" value="Back-end Projects">Challenges </input>
+
+    <input type="submit" id="submit"> </input>
+    label for="Maybe"><input id="Maybe" type="radio" name="Maybe" value="Maybe" value="May" checked> Maybe</label>
+    <label for="Not sure"><input id="Not sure" type="radio" name="Not sure" value="Not sure" value="Not sure"> Not sure</label>
+
+
+    <textarea> Enter your comment here... </textarea>
+
+
+</form>
+
+
 <link rel="stylesheet" href="styles.css">
-<main id="main">
-    <title id="title"> TDr. Norman Borlaug</title>
-    <figure id="img-div">
-    </figure>
-    <img-div id="img-div">
-        <img-caption>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat
-            yields - part of his life-long war on hunger.
-        </img-caption>
-        <image id="image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"/>
-        <figcaption id="img-caption"> Here's a time line of Dr. Borlaug's life:
-        </figcaption>
-    </img-div>
-
-
-    <tribute-info id="tribute-info"> 1914 - Born in Cresco, Iowa
-        1933 - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known
-        as the "National Youth Administration"
-        1935 - Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving
-        Americans. "I saw how food changed them", he said. "All of this left scars on me."
-        1937 - Finishes university and takes a job in the US Forestry Service
-        1938 - Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles
-        Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.
-        1941 - Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military
-        asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.
-        1942 - Receives a Ph.D. in Genetics and Plant Pathology
-        1944 - Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head
-        a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease
-        resistent wheat - including different varieties for each major climate on Earth.
-        1945 - Discovers a way to grown wheat twice each season, doubling wheat yields
-        1953 - crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that
-        responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.
-        1962 - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help
-        mitigate mass starvation due to a rapidly expanding population
-        1970 - receives the Nobel Peace Prize
-        1983 - helps seven African countries dramatically increase their maize and sorghum yields
-        1984 - becomes a distinguished professor at Texas A&M University
-        2005 - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are
-        the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently
-        dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it
-        science, people were selecting the best breeds."
-        2009 - dies at the age of 95.
-        "Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering
-        intellect, persistence and scientific vision can make to human peace and progress."
-
-        -- Indian Prime Minister Manmohan Singh
-    </tribute-info>
-    <tribute-link><p>If you have time, you should read more about this incredible human being on his
-        <a target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug" id="tribute-link" target="_blank">Wikipedia
-            entry.</p></a>
-    </tribute-link>
-
-</main>
