--- a/index1.html
+++ b/index1.html
@@ -1,126 +1,60 @@
-<main id="main-doc">JS Documentation
-    <section class="main-section" id="Introduction">
-        <header>Introduction</header>
-        <p> JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language.
-            Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its
-            environment to provide programmatic control over them. </p>
-        <p>
-            JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language
-            elements such as operators, control structures, and statements. Core JavaScript can be extended for a
-            variety of purposes by supplementing it with additional objects; for example:</p>
-        <li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document
-            Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML
-            form and respond to user events such as mouse clicks, form input, and page navigation.
-            <code>const PI = 3.14;</code>
-            <code>// THIS WILL CAUSE AN ERROR function f() {}; const f = 5; // THIS </code>
-            WILL CAUSE AN ERROR ALSO function f() { const g = 5; var g;
-            //statements }
-            <code>const MY_OBJECT = {"key": "value"}; MY_OBJECT.key =
-                "otherValue"; </code>
-            <code>if (condition) { statement_1; } else { statement_2; } </code>
-            <code>if (condition_1) { statement_1; } else if (condition_2) {
-                statement_2; } else if (condition_n) { statement_n; } else {
-                statement_last; } </code>
-        </li>
-        <li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a
-            server. For example, server-side extensions allow an application to communicate with a database, provide
-            continuity of information from one invocation to another of the application, or perform file manipulations
-            on a server.
-        </li>
-    </section>
-    <section class="main-section" id="What_you_should_already_know">
-        <header>What_you_should_already_know</header>
-        <p>This guide assumes you have the following basic background:</p>
-        <li>A general understanding of the Internet and the World Wide Web (WWW).</li>
-        <li>Good working knowledge of HyperText Markup Language (HTML).</li>
-        <li>Some programming experience. If you are new to programming, try one of the tutorials linked on the main page
-            about JavaScript.
-        </li>
-    </section>
-    <section class="main-section" id="JavaScript_and_Java">
-        <header>JavaScript_and_Java</header>
-        <p>JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript
-            language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows
-            most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why
-            it was renamed from LiveScript to JavaScript.</p>
+<link rel="stylesheet" href="styles.css">
+<main id="welcome-section">
+    <h1> Hey I am Mimic </h1>
+    <div id="projects"> These are some of my projects
+        <div class="project-tile">
+            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx"> </a>
+        </div>
+        <nav id="navbar" href=#projects>
+            <a href=#projects> Let's work together...</a>
 
-        <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime
-            system based on a small number of data types representing numeric, Boolean, and string values. JavaScript
-            has a prototype-based object model instead of the more common class-based object model. The prototype-based
-            model provides dynamic inheritance; that is, what is inherited can vary for individual objects.</p>
-        <p>JavaScript also supports functions without any special declarative requirements. Functions can be properties
-            of objects, executing as loosely typed methods.</p>
+        </nav>
+        <a id="profile-link" href=#projects target="_blank"> dfgd</a>
+    </div>
 
-        <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes,
-            and methods. You do not have to be concerned with whether methods are public, private, or protected, and you
-            do not have to implement interfaces. Variables, parameters, and function return types are not explicitly
-            typed.</p>
-    </section>
-    <section class="main-section" id="Hello_world">
-        <header>Hello_world</header>
-        <p> To get started with writing JavaScript, open the Scratchpad and write your first "Hello world" JavaScript
-            code:
-            function greetMe(yourName) { alert("Hello " + yourName); }
-            greetMe("World");</p>
-        <p>Select the code in the pad and hit Ctrl+R to watch it unfold in your browser!</p>
-    </section>
-    <section class="main-section" id="Variables">
-        <header>Variables</header>
-        <p>You use variables as symbolic names for values in your application. </p>
-        The names of variables, called identifiers, conform to certain rules.
+    <main>
 
-        A JavaScript identifier must start with a letter, underscore (_), or dollar sign ($); subsequent characters can
-        also be digits (0-9). Because JavaScript is case sensitive, letters include the characters "A" through "Z"
-        (uppercase) and the characters "a" through "z" (lowercase).
+        <style>
+            @media (max-weight: 800px) {
+                div {
+                    font-size: 10px;
+                    background: orange;
+                    top: 10px;
+                    right: 30px;
+                }
+            }
 
-        You can use ISO 8859-1 or Unicode letters such as å and ü in identifiers. You can also use the Unicode escape
-        sequences as characters in identifiers. Some examples of legal names are Number_hits, temp99, and _name.
-    </section>
+            #navbar {
+                position: absolute;
+                background: lime;
+                top: 10px;
+                right: 30px;
+            }
 
-    <nav id="navbar">
-        <header>
+            @media screen and (min-color: 3) {
+                main {
+                    background: #ccc;
+                }
 
-            <a class="nav-link" href=#Introduction>Introduction</a>
-            <a class="nav-link" href=#Variables>Variables</a>
-            <a class="nav-link" href=#Hello_world>Hello_world</a>
-            <a class="nav-link" href=#JavaScript_and_Java> JavaScript_and_Java</a>
-            <a class="nav-link" href=#What_you_should_already_know>What_you_should_already_know</a>
-        </header>
-    </nav>
-</main>
-<style>
-    p {
-        font-size: 20px;
+            ;
 
-    @media (max-font-size: 10px) {
-        /* CSS Rules */
-    }
+                div {
+                    padding: 10px;
+                    background: #e8bfad;
+                    margin: auto;
+                }
 
-    ;
-    @media (max-height: 800px) {
-        /* CSS Rules */
-    }
+                @media screen and (min-device-width: 1600px) {
+                    div {
+                        width: 1500px;
+                    }
+                }
+                @media screen and (device-width: 1280px) {
+                    div {
+                        width: 1100px;
+                    }
+                }
 
-    }
-
-    /* Only change code below this line */
-    @media (max-height: 800px) {
-        p {
-            font-size: 10px;
-        }
-    }
-
-    <
-    .style >
-    < link rel
-
-    =
-    "stylesheet"
-    href
-
-    =
-    "styles.css"
-    >
-
-
+            }
+        </style>
 
