build-a-personal-portfolio-webpage

--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="styles.css" media="screen and (color)">
 <main id="welcome-section">
     <h1> Hey I am Mimic </h1>
     <div id="projects"> These are some of my projects
@@ -9,52 +9,27 @@
             <a href=#projects> Let's work together...</a>
 
         </nav>
-        <a id="profile-link" href=#projects target="_blank"> dfgd</a>
+        <a id="profile-link" href=#projects target="_blank"> How do you take your coffee? </a>
     </div>
 
-    <main>
 
-        <style>
-            @media (max-weight: 800px) {
-                div {
-                    font-size: 10px;
-                    background: orange;
-                    top: 10px;
-                    right: 30px;
-                }
-            }
+</main>
+<style>
+    @media screen and (max-width: 600px) {
+        body {
+            background: #fc0;
+        }
+    }
 
-            #navbar {
-                position: absolute;
-                background: lime;
-                top: 10px;
-                right: 30px;
-            }
+    #navbar {
+        position: absolute;
+        background: lime;
+        top: 10px;
+        right: 30px;
+    }
 
-            @media screen and (min-color: 3) {
-                main {
-                    background: #ccc;
-                }
-
-            ;
-
-                div {
-                    padding: 10px;
-                    background: #e8bfad;
-                    margin: auto;
-                }
-
-                @media screen and (min-device-width: 1600px) {
-                    div {
-                        width: 1500px;
-                    }
-                }
-                @media screen and (device-width: 1280px) {
-                    div {
-                        width: 1100px;
-                    }
-                }
-
-            }
-        </style>
+    }
+    <
+    /
+    style >
 
