storing-values-with-the-assignment-operator (1)

--- a/index1.html
+++ b/index1.html
@@ -1,35 +1,5 @@
-<link rel="stylesheet" href="styles.css" media="screen and (color)">
-<main id="welcome-section">
-    <h1> Hey I am Mimic </h1>
-    <div id="projects"> These are some of my projects
-        <div class="project-tile">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx"> </a>
-        </div>
-        <nav id="navbar" href=#projects>
-            <a href=#projects> Let's work together...</a>
+// Setup
+var a;
+a = 7;
 
-        </nav>
-        <a id="profile-link" href=#projects target="_blank"> How do you take your coffee? </a>
-    </div>
-
-
-</main>
-<style>
-    @media screen and (max-width: 600px) {
-        body {
-            background: #fc0;
-        }
-    }
-
-    #navbar {
-        position: absolute;
-        background: lime;
-        top: 10px;
-        right: 30px;
-    }
-
-    }
-    <
-    /
-    style >
-
+// Only change code below this line
