declare-string-variables

--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,2 @@
-// Setup
-var a;
-a = 7;
-var b;
-b = a;
-// Only change code below this line
+var myFirstName = "Anna";
+var myLastName = "Fomina";
