appending-variables-to-strings

--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,4 @@
-// Only change code below this line
-const myName = "Anna";
-const myStr = "My name is " + myName + "nd I am well!";
+// Change code below this line
+const someAdjective = "My name is Ann";
+let myStr = "Learning to code is ";
+myStr += someAdjective;
