manipulate-arrays-with-shift

--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
 // Setup
-const myArray = [["John", 23], ["cat", 2]];
-var removedFromMyArray = myArray.pop();
+const myArray = [["John", 23], ["dog", 3]];
+const removedFromMyArray = myArray.shift([0]);
 // Only change code below this line
