--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,7 @@
-// Setup
-const myArray = [["John", 23], ["dog", 3]];
-myArray.shift();
-myArray.unshift(["Paul", 35]);
-// Only change code below this line
+var myList = [
+["Canned Beans", 3],
+["Milk Galon", 1],
+["Cereal", 2],
+["Toilet Paper", 12],
+["Sack of Rice", 1]
+];
