write-reusable-javascript-with-functions

--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,4 @@
-var myList = [
-["Canned Beans", 3],
-["Milk Galon", 1],
-["Cereal", 2],
-["Toilet Paper", 12],
-["Sack of Rice", 1]
-];
+function reusableFunction() {
+console.log("Hi World");
+}
+reusableFunction()
