passing-values-to-functions-with-arguments

--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,4 @@
-function reusableFunction() {
-console.log("Hi World");
+function functionWithArgs(one, two) {
+console.log(one + two);
 }
-reusableFunction()
+functionWithArgs(9, 3);
