return-a-value-from-a-function-with-return

--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,5 @@
-function functionWithArgs(one, two) {
-console.log(one + two);
+function timesFive(num) {
+return num * 5;
 }
-functionWithArgs(9, 3);
+
+const answer = timesFive(5);
