--- a/index1.html
+++ b/index1.html
@@ -1,20 +1,10 @@
-// Declare the myGlobal variable below this line
-let oopsGlobal = 5;
-let myGlobal = 10;
-function fun1() {
-// Assign 5 to oopsGlobal Here
+function myLocalScope() {
+// Only change code below this line
+const myVar = "foo";
+console.log('inside myLocalScope', myVar);
+}
+myLocalScope();
 
-}
-
-// Only change code above this line
-
-function fun2() {
-var output = "";
-if (typeof myGlobal != "undefined") {
-output += "myGlobal: " + myGlobal;
-}
-if (typeof oopsGlobal != "undefined") {
-output += " oopsGlobal: " + oopsGlobal;
-}
-console.log(output);
-}
+// Run and check the console
+// myVar is not defined outside of myLocalScope
+console.log('outside myLocalScope', myVar);
