--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,9 @@
-function trueOrFalse(wasThatTrue) {
-// Only change code below this line.
-
-if (wasThatTrue) {
-return "Yes, that was true";
+// Setup
+function testEqual(val) {
+if (val==12) { // Change this line
+return "Equal";
 }
-return "No, that was false";
-
-// Only change code above this line.
+return "Not Equal";
 }
-// Only change code above this line
 
+testEqual(10);
