--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,13 @@
-// Setup
-function testStrictNotEqual(val) {
-if (val !==17) { // Change this line
-return "Not Equal";
-}
-return "Equal";
+function testGreaterThan(val) {
+if (val  >  100) {  // Change this line
+return "Over 100";
 }
 
-testStrictNotEqual(10);
+if (val  >  10) {  // Change this line
+return "Over 10";
+}
+
+return "10 or Under";
+}
+
+testGreaterThan(10);
