--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,13 @@
-function testLessOrEqual(val) {
-if (val <= 12) {  // Change this line
-return "Smaller Than or Equal to 12";
+function testLogicalAnd(val) {
+// Only change code below this line
+
+if (val <= 50 && val >= 25) {
+return "Yes";
 }
 
-if (val <= 24) {  // Change this line
-return "Smaller Than or Equal to 24";
+// Only change code above this line
+return "No";
 }
 
-return "More Than 24";
-}
-
-testLessOrEqual(10);
+// Change this value to test
+testLogicalAnd(10);
