--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,13 @@
-function isLess(a, b) {
+// Setup
+function abTest(a, b) {
 // Only change code below this line
-
-return a <= b;
-
-// Only change code above this line
+if (a < 0 || b < 0) {
+return undefined;
 }
 
-isLess(10, 15);
+// Only change code above this line
+
+return Math.round(Math.pow(Math.sqrt(a) + Math.sqrt(b), 2));
+}
+
+abTest(2,2);
