--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,17 @@
-function checkObj(obj, checkProp) {
-if (obj.hasOwnProperty(checkProp)) {
-return obj[checkProp];
-} else {
-return "Not Found";
+const myMusic = [
+{    "artist": "Billy Joel",
+"title": "Piano Man",
+"release_year": 1973,
+"formats": [
+"CD",
+"8T",
+"LP"
+],
+"gold": true
+},
+{    "artist": "Happy People",
+"title": "Piano Man",
+"release_year": 1982,
+"formats": [      "CD",      "8T",      "LP"    ],
 }
-}
+];
