--- a/index1.html
+++ b/index1.html
@@ -1,17 +1,12 @@
-const myMusic = [
-{    "artist": "Billy Joel",
-"title": "Piano Man",
-"release_year": 1973,
-"formats": [
-"CD",
-"8T",
-"LP"
-],
-"gold": true
+const myStorage = {
+"car": {
+"inside": {
+"glove box": "maps",
+"passenger seat": "crumbs"
 },
-{    "artist": "Happy People",
-"title": "Piano Man",
-"release_year": 1982,
-"formats": [      "CD",      "8T",      "LP"    ],
+"outside": {
+"trunk": "jack"
 }
-];
+}
+};
+const gloveBoxContents = myStorage.car.inside["glove box"];
