accessing-nested-arrays

--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,20 @@
-const myStorage = {
-"car": {
-"inside": {
-"glove box": "maps",
-"passenger seat": "crumbs"
+const myPlants = [
+{
+type: "flowers",
+list: [
+"rose",
+"tulip",
+"dandelion"
+]
 },
-"outside": {
-"trunk": "jack"
+{
+type: "trees",
+list: [
+"fir",
+"pine",
+"birch"
+]
 }
-}
-};
-const gloveBoxContents = myStorage.car.inside["glove box"];
+];
+
+const secondTree = myPlants[1].list[1];
