--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,6 @@
 // Setup
 const myArray = [];
-let i = 5;
-
-while (i >= 0) {
+for (let i = 1; i < 6; i++) {
 myArray.push(i);
-i--;
 }
 // Only change code below this line
