--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,9 @@
-function multiplyAll(arr) {
-let product = 1;
-// Only change code below this line
-for (var i = 0; i < arr.length; i++) {
-for (var j = 0; j < arr[i].length; j++) {
-product = product * arr[i][j];
-}
-}
-// Only change code above this line
-return product;
-}
+// Setup
+const myArray = [];
+let i = 10;
 
-multiplyAll([[1, 2], [3, 4], [5, 6, 7]]);
+// Only change code below this line
+do {
+myArray.push(i);
+i++;
+} while (i < 10);
