--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,6 @@
-function randomFraction() {
+var randomNumberBetween0and19 = Math.floor(Math.random() * 20);
 
-// Only change code below this line
-
-return Math.random(randomFraction);
-
-// Only change code above this line
+function randomWholeNum() {
+// Only change code below this line.
+return Math.floor(Math.random() * 10);
 }
