generate-random-whole-numbers-within-a-range

--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,6 @@
-var randomNumberBetween0and19 = Math.floor(Math.random() * 20);
-
-function randomWholeNum() {
-// Only change code below this line.
-return Math.floor(Math.random() * 10);
+function randomRange(myMin, myMax) {
+// Only change code below this line
+var ki = Math.floor(Math.random() * (myMax - myMin + 1)) + myMin
+return ki;
+// Only change code above this line
 }
