--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,5 @@
-function randomRange(myMin, myMax) {
-// Only change code below this line
-var ki = Math.floor(Math.random() * (myMax - myMin + 1)) + myMin
-return ki;
-// Only change code above this line
+function convertToInteger(str) {
+return parseInt(str);
 }
+
+convertToInteger("56");
