--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,11 @@
-function checkSign(num) {
-return (num === 0) ? "zero"
-: (num > 0) ? "positive"
-:"negative"
+// Only change code below this line
+function countdown(n){
+if (n < 1) {
+return [];
+} else {
+const arr = countdown(n - 1);
+arr.splice(0, 0, n);
+return arr;
 }
-
-checkSign(10);
+}
+// Only change code above this line
