--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,9 @@
-// Only change code below this line
-function countdown(n){
-if (n < 1) {
+function rangeOfNumbers(startNum, endNum) {
+if (endNum < startNum) {
 return [];
 } else {
-const arr = countdown(n - 1);
-arr.splice(0, 0, n);
-return arr;
+const numbers = rangeOfNumbers(startNum, endNum - 1);
+numbers.push(endNum);
+return numbers;
 }
 }
-// Only change code above this line
