--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,10 @@
-function rangeOfNumbers(startNum, endNum) {
-if (endNum < startNum) {
-return [];
-} else {
-const numbers = rangeOfNumbers(startNum, endNum - 1);
-numbers.push(endNum);
-return numbers;
+function checkScope() {
+"use strict";
+let i = "function scope";
+if (true) {
+let i = "block scope";
+console.log("Block scope i is: ", i);
 }
+console.log("Function scope i is: ", i);
+return i;
 }
