--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,6 @@
-const myConcat = (arr1, arr2) => {
-"use strict";
-return arr1.concat(arr2);
-};
-// test your code
-console.log(myConcat([1, 2], [3, 4, 5]));
+// Only change code below this line
+const increment = (number, value = 1) => number + value;
+
+console.log(increment(5, 2));
+console.log(increment(5));
+// Only change code above this line
