use-the-rest-parameter-with-function-parameters

--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,7 @@
-// Only change code below this line
-const increment = (number, value = 1) => number + value;
-
-console.log(increment(5, 2));
-console.log(increment(5));
-// Only change code above this line
+const sum = (...args) => {
+return args.reduce((a, b) => a + b, 0);
+}
+console.log(sum(0, 1, 2));
+console.log(sum(1,2,3,4));
+console.log(sum(5));
+console.log(sum());
