--- a/index1.html
+++ b/index1.html
@@ -7,5 +7,6 @@ tomorrow: 80
 // Only change code below this line
 
 
-const { today, tomorrow } = HIGH_TEMPERATURES;
+const { today: highToday, tomorrow:highTomorrow } = HIGH_TEMPERATURES;
+
 // Only change code above this line
