--- a/index1.html
+++ b/index1.html
@@ -1,2 +1,10 @@
-const createPerson = (name, age, gender) => ({name, age, gender });
 // Only change code below this line
+const bicycle = {
+gear: 2,
+setGear (newGear) {
+this.gear = newGear;
+}
+};
+// Only change code above this line
+bicycle.setGear(3);
+console.log(bicycle.gear);
