--- a/index1.html
+++ b/index1.html
@@ -1,7 +1,8 @@
-<html>
-<body>
-<!-- Only change code below this line -->
-<script type="module" src="index.js"></script>
-<!-- Only change code above this line -->
-</body>
-</html>
+const uppercaseString = (string) => {
+return string.toUpperCase();
+}
+
+const lowercaseString = (string) => {
+return string.toLowerCase()
+}
+export { uppercaseString, lowercaseString };
