--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,13 @@
 const makeServerRequest = new Promise((resolve, reject) => {
-// responseFromServer represents a response from a server
-let responseFromServer;
+// responseFromServer is set to true to represent a successful response from a server
+let responseFromServer = true;
 
 if(responseFromServer) {
 resolve("We got the data");
-// Change this line
-} else {   reject("Data not received");
-// Change this line
+} else {
+reject("Data not received");
 }
+});
+makeServerRequest.then(result => {
+console.log (result)
 });
