--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,1 @@
-let text = "<h1>Winter is coming</h1>";
-let myRegex = /<.*?>/; // Change this line
-let result = text.match(myRegex);
+let reCriminals = /C+/; // Change this line
