--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,3 @@
-let username = "JackOfAllTrades";
-let userCheck = /^[a-z]([0-9]{2,}|[a-z]+\d*)$/i;
-let result = userCheck.test(username);
+let sample = "Whitespace is important in separating words";
+let countWhiteSpace = /\s/g;// Change this line
+let result = sample.match(countWhiteSpace);
