use-the-javascript-console-to-check-the-value-of-a-variable

--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,8 @@
-let hello = "   Hello, World!  ";
-let wsRegex = /^\s+|\s+$/g; // Change this line
-let result = hello.replace(wsRegex, ""); // Change this line
+let a = 5;
+let b = 1;
+a++;
+// Only change code below this line
+
+console.log(a);
+let sumAB = a + b;
+console.log(sumAB);
