--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,5 @@
-let output = "Get this to show once in the freeCodeCamp console and not at all in the browser console";
-console.log(output);
-console.clear();
+let seven = 7;
+let three = "3";
+console.log(typeof three);
+console.log(typeof seven);
+// Only change code below this line
