catch-misspelled-variable-and-function-names

--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,4 @@
-let seven = 7;
-let three = "3";
-console.log(typeof three);
-console.log(typeof seven);
-// Only change code below this line
+let receivables = 10;
+let payables = 8;
+let netWorkingCapital = receivables - payables;
+console.log(`Net working capital is: ${netWorkingCapital}`);
