use-an-array-to-store-a-collection-of-data

--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,10 @@
-function myFunc() {
-for (let i = 1; i <= 4; i += 2) {
-console.log("Still going!");
+let yourArray = ['bye', 2455, true, false, undefined, null,
+{
+a: "a",
+b: "b"
+},
+{
+c: "c",
+d: "d"
 }
-}
+]; // Change this line
