access-an-arrays-contents-using-bracket-notation

--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,5 @@
-let yourArray = ['bye', 2455, true, false, undefined, null,
-{
-a: "a",
-b: "b"
-},
-{
-c: "c",
-d: "d"
-}
-]; // Change this line
+let myArray = ["a", "b", "c", "d"];
+// Only change code below this line
+myArray[1] = "not b anymore";
+// Only change code above this line
+console.log(myArray);
