--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,10 @@
-let myArray = ["a", "b", "c", "d"];
+function mixedNumbers(arr) {
 // Only change code below this line
-myArray[1] = "not b anymore";
+arr.unshift('I', 2, 'three');
+arr.push(7, 'VIII', 9
+);
 // Only change code above this line
-console.log(myArray);
+return arr;
+}
+
+console.log(mixedNumbers(['IV', 5, 'six']));
