find-the-longest-word-in-a-string

--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,12 @@
-function factorialize(num) {
-if (num === 0) {
-return 1;
+function findLongestWordLength(str) {
+let words = str.split(' ');
+let maxLength = 0;
+
+for (let i = 0; i < words.length; i++) {
+if (words[i].length > maxLength) {
+maxLength = words[i].length;
 }
-return num * factorialize(num - 1);
 }
 
-factorialize(5);
+return maxLength;
+}
