where-do-i-belong

--- a/index1.html
+++ b/index1.html
@@ -1,8 +1,13 @@
-function bouncer(arr) {
-let newArray = [];
+function getIndexToIns(arr, num) {
+arr.sort((a, b) => a - b);
+
 for (let i = 0; i < arr.length; i++) {
-if (arr[i]) newArray.push(arr[i]);
+if (arr[i] >= num)
+return i;
 }
-return newArray;
+
+return arr.length;
 }
-bouncer([7, "ate", "", false, 9]);
+
+
+getIndexToIns([40, 60], 50);
