--- a/index1.html
+++ b/index1.html
@@ -1,13 +1,10 @@
-function getIndexToIns(arr, num) {
-arr.sort((a, b) => a - b);
-
-for (let i = 0; i < arr.length; i++) {
-if (arr[i] >= num)
-return i;
+function mutation(arr) {
+let test = arr[1].toLowerCase();
+let target = arr[0].toLowerCase();
+for (let i = 0; i < test.length; i++) {
+if (target.indexOf(test[i]) < 0) return false;
+}
+return true;
 }
 
-return arr.length;
-}
-
-
-getIndexToIns([40, 60], 50);
+mutation(["hello", "hey"]);
