change-the-prototype-to-a-new-object

--- a/index1.html
+++ b/index1.html
@@ -2,11 +2,13 @@ function Dog(name) {
 this.name = name;
 }
 
+Dog.prototype = {
 // Only change code below this line
-function joinDogFraternity(candidate) {
-if (candidate.constructor === Dog) {
-return true;
-} else {
-return false;
+numLegs: 2,
+eat: function() {
+console.log("nom nom nom");
+},
+describe: function() {
+console.log("My name is " + this.name);
 }
-}
+};
