use-closure-to-protect-properties-within-an-object-from-being-modified-externally

--- a/index1.html
+++ b/index1.html
@@ -1,18 +1,7 @@
-let bird = {
-name: "Donald",
-numLegs: 2
-};
+function Bird() {
+let weight = 15;
 
-let boat = {
-name: "Warrior",
-type: "race-boat"
-};
-
-// Only change code below this line
-let glideMixin = function(obj) {
-obj.glide = function() {
-console.log("Glide!");
+this.getWeight = function() {
+return weight;
 }
-};
-glideMixin(bird);
-glideMixin(boat);
+}
