refactor-global-variables-out-of-functions

--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,20 @@
 // The global variable
-let fixedValue = 4;
+const bookList = ["The Hound of the Baskervilles", "On The Electrodynamics of Moving Bodies", "Philosophiæ Naturalis Principia Mathematica", "Disquisitiones Arithmeticae"];
 
-// Only change code below this line
-function incrementer(ter) {
-var ter = fixedValue+1;
-return ter;
+// Change code below this line
+function add(arr, bookName) {
+let newArr = [...arr]; // Copy the bookList array to a new array.
+newArr.push(bookName); // Add bookName parameter to the end of the new array.
+return newArr; // Return the new array.
+}
 
-// Only change code above this line
+// Change code below this line
+function remove(arr, bookName) {
+let newArr = [...arr]; // Copy the bookList array to a new array.
+if (newArr.indexOf(bookName) >= 0) {
+// Check whether the bookName parameter is in new array.
+newArr.splice(newArr.indexOf(bookName), 1); // Remove the given paramater from the new array.
+return newArr; // Return the new array.
+}
+
 }
