--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,12 @@
-function truthCheck(collection, pre) {
-return collection.every(obj => obj[pre]);
+function addTogether() {
+const [first, second] = arguments;
+if (typeof(first) !== "number")
+return undefined;
+if (arguments.length === 1)
+return (second) => addTogether(first, second);
+if (typeof(second) !== "number")
+return undefined;
+return first + second;
 }
 
-truthCheck([{name: "Quincy", role: "Founder", isBot: false}, {name: "Naomi", role: "", isBot: false}, {name: "Camperbot", role: "Bot", isBot: true}], "isBot");
+addTogether(2,3);
