--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,7 @@
-const greet = ()=> {
-return "hello world!"
+function makeNegative(num) {
+if (num >0) {
+return -num
+} if (num < 0) {
+return num
+} else return 0;
 }
