--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,4 @@
-
-function even_or_odd(n) {
-if(n % 2 === 0)
-{
-return 'Even';
+function opposite(number){
+let oppNum = 0 - number
+return oppNum;
 }
-else
-{
-return 'Odd';
-}
-};
