--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,9 @@
-function numberToString(num) {
-return String(num)
+function squareSum(numbers){
+let sumOfNumbers = 0
+let i = 0
+while (i < numbers.length){
+sumOfNumbers += (numbers[i] ** 2)
+i++
+}
+return sumOfNumbers
 }
